# open-cascade-capi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: opencascade.xml  opencascade_params.xml
